# internal/delivery/http/location.go
@@ -30,11 +30,11 @@ func NewLocationHandler(service *service.Service) LocationHandler {
 // @Success 200 {object} entity.CheckLocationResponse
 // @Failure 400 {object} entity.ErrorResponse
 // @Failure 500 {object} entity.ErrorResponse
-// @Router /location [post]
+// @Router /location/check [post]
 func (h *LocationHandlerImpl) CheckLocation(c *gin.Context) {
-	var req *entity.CheckLocationRequest
+	var req entity.CheckLocationRequest
 
-	if err := c.ShouldBindJSON(req); err != nil {
+	if err := c.ShouldBindJSON(&req); err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, entity.ErrorResponse{
 			Error:   "Некорректное тело запроса",
 			Details: err.Error(),
@@ -42,7 +42,7 @@ func (h *LocationHandlerImpl) CheckLocation(c *gin.Context) {
 		return
 	}
 
-	resp, err := h.service.Location.CheckLocation(c, req)
+	resp, err := h.service.Location.CheckLocation(c, &req)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusInternalServerError, entity.ErrorResponse{
 			Error:   "Не удалось проверить локацию",
